src2/objects/NES_AccountTelemetryPreferences__c.object
<CustomObject>
    <description>Rename API from &quot;NES_AccountTelemetryPreferences&quot; to &quot;NES_AccountTelemetryPreferences&quot; - then delete this description</description>
    <fields>
        <fullName>AutoOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to avaiable it in auto-order processes</description>
        <label>Auto-Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvgRound__c</fullName>
        <formula>IF(OR(ISBLANK(NES_AverageConsumption__c),ISNULL(NES_AverageConsumption__c)), 
0, 
ROUND(NES_AverageConsumption__c,2))</formula>
        <label>Average daily usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysOfStock__c</fullName>
        <formula>IF(OR(ISBLANK(NES_AverageConsumption__c),ISNULL(NES_AverageConsumption__c)), 
			0, 
			NES_Count__c / NES_AverageConsumption__c)</formula>
        <label>Days of Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factor__c</fullName>
        <label>Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check when save Actual Stock for the first time. Used in Workflow process that save the Initial Stock.</description>
        <label>First Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InitialStock__c</fullName>
        <label>Initial Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Account_Telemetry__c</fullName>
        <label>Telemetry Account</label>
        <referenceTo>NES_AccountTelemetry__c</referenceTo>
        <relationshipLabel>Telemetry Accounts Preferences</relationshipLabel>
        <relationshipName>NES_AccountTelemetryPreferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NES_AverageConsumption__c</fullName>
        <label>Average daily usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Count__c</fullName>
        <label>Actual Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_CutOff__c</fullName>
        <label>Order Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_EstimatedConsumption__c</fullName>
        <label>Estimated cycle usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_EstimatedReplenishment__c</fullName>
        <label>Quantity needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Key__c</fullName>
        <label>Key</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>NES_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Spoons</fullName>
                </value>
                <value>
                    <fullName>Milks</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Ristretto</fullName>
                </value>
                <value>
                    <fullName>Ristretto Intenso</fullName>
                </value>
                <value>
                    <fullName>Ristretto Origin India</fullName>
                </value>
                <value>
                    <fullName>Espresso Leggero</fullName>
                </value>
                <value>
                    <fullName>Espresso Forte</fullName>
                </value>
                <value>
                    <fullName>Espresso Origin Brazil</fullName>
                </value>
                <value>
                    <fullName>Lungo Leggero</fullName>
                </value>
                <value>
                    <fullName>Lungo Forte</fullName>
                </value>
                <value>
                    <fullName>Lungo Origin Guatemala</fullName>
                </value>
                <value>
                    <fullName>Espresso Decaffeinato</fullName>
                </value>
                <value>
                    <fullName>Lungo Decaffeinato</fullName>
                </value>
                <value>
                    <fullName>Espresso Vanilla</fullName>
                </value>
                <value>
                    <fullName>Espresso Caramel</fullName>
                </value>
                <value>
                    <fullName>Unrecognized</fullName>
                </value>
                <value>
                    <fullName>Paper Cups</fullName>
                </value>
                <value>
                    <fullName>Stirrers</fullName>
                </value>
                <value>
                    <fullName>Long stirrers</fullName>
                </value>
                <value>
                    <fullName>Take Away</fullName>
                </value>
                <value>
                    <fullName>Autocappuccino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_NoCapsulesToOrder__c</fullName>
        <label>No Capsules To Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_NoOfBoxesToOrder__c</fullName>
        <label>No Of Boxes To Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PriceBook</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>NES_AccountTelemetryPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>NES_AccountTelemetryPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capsule</fullName>
                </value>
                <value>
                    <fullName>Consumables</fullName>
                </value>
                <value>
                    <fullName>Safety Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderNeeded__c</fullName>
        <description>Formula field: when actual stock is below order point it will be true. Necesary for calculations.</description>
        <formula>NES_Count__c &lt;  NES_CutOff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderPointRound__c</fullName>
        <formula>IF(OR(ISBLANK(NES_CutOff__c),ISNULL(NES_CutOff__c)), 
0, 
ROUND(NES_CutOff__c,0))</formula>
        <label>Order Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SafetyStock__c</fullName>
        <label>Safety Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Telemetry Account Preferences</label>
    <nameField>
        <displayFormat>PLI-{0000}</displayFormat>
        <label>Third Telemetry Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telemetry Accounts Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NES_LCMP_Lock_Preferences_Key_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(NES_Account_Telemetry__c) ||  ISCHANGED(NES_Key__c) || ISCHANGED(NES_Type__c)</errorConditionFormula>
        <errorMessage>You can update only Count field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NES_Lock_Preferences_Count_Decimal</fullName>
        <active>false</active>
        <errorConditionFormula>IF ( OR (ISPICKVAL(NES_Type__c, &apos;Capsule&apos;) , ISPICKVAL(NES_Type__c, &apos;Safety Stock&apos;))
                    , CONTAINS ( TEXT( NES_Count__c ) , &apos;.&apos; ), FALSE)</errorConditionFormula>
        <errorDisplayField>NES_Count__c</errorDisplayField>
        <errorMessage>Decimals aren&apos;t accepted for Capsule and Safety Stock.</errorMessage>
    </validationRules>
</CustomObject>